Fixed the information section as it wasnt aligning to the left.

--- a/style.css
+++ b/style.css
@@ -331,8 +331,23 @@ header {
   border-radius: 6px;
 }
 
+.google-map img {
+  width: 100%;
+}
+
 .restaurant-information {
-  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  margin: 0 auto;
+
+  /* margin: 0rem 1rem; */
+  /* padding: 0rem 1rem; */
+}
+
+.restaurant-information li {
+  margin-top: 0.5rem;
   padding: 1rem 1rem;
 }
 
@@ -349,10 +364,10 @@ header {
 
 .media {
   background-color: #6b7a3a;
-  padding: 0 2rem;
+  padding: 1.5rem 2rem;
   padding-bottom: 2rem;
   display: flex;
-  margin-top: 0;
+  /* margin-top: 1rem; */
 
   gap: 0.75rem;
 }
@@ -390,7 +405,7 @@ header {
 
 /* Footer */
 footer {
-  position: flex;
+  display: flex;
   background-color: #212121;
   color: #f4efe6;
   justify-content: center;
